# AlphabetLoopGame

./: CMakeLists.txt  README.md  config.cfg
headers/: common.h  config.h  control.h  functions.h  game.h  input.h  logging.h  map.h  screen.h
headers/config/: cvars.h
headers/functions/: timer.h
src/: config.cpp  control.cpp  functions.cpp  game.cpp  input.cpp  main.cpp  map.cpp  screen.cpp
src/config/: cvars.cpp
src/functions/: timer.cpp
